--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <title>Bienvenidos a Html y Css!!!</title>
 </head>
+<link href="main.css" rel="stylesheet"/>
 <body>
 "Apendiendo Html y Css"
 </body>
