--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 </head>
 <link href="main.css" rel="stylesheet"/>
 <body>
-"Apendiendo Html y Css"
+  <h1>Aprendiendo Html y Css"</h1>
 </body>
 </html>
