--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <title>Bienvenidos a Html y Css!!!</title>
 </head>
 <body>
-"Apendiendiendo Html y Css"
+<link href="main.css" rel="stylesheet"/>
+Apendiendiendo Html y Css!!!
 </body>
 </html>
