--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 </head>
 <body>
 <link href="main.css" rel="stylesheet"/>
-Apendiendiendo Html y Css!!!
+Aprendiendo Html y Css!!!
 </body>
 </html>
